Update and rename wetherapp.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather forecast app</title>
     <link rel="stylesheet" href="app.css">
-    <link rel="icon" href="images/wicon.png">
+    <link rel="icon" href="wicon.png">
 </head>
 <body>
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img src="pic Assets/Dashboard/7461221.png" alt="" class="menu"></button>
+            <button><img src="7461221.png" alt="" class="menu"></button>
         </div>
         <div class="error">
             <p>Invalid city name</p>
         </div>
         <div class="weather">
-            <img src="pic Assets/Dashboard/4439057.png" class="weather-icon">
+            <img src="4439057.png" class="weather-icon">
             <h1 class="temo">22°c</h1>
             <h2 class="city">New york</h2>
             <div class="details">
                 <div class="col">
-                    <img class="image" src="pic Assets/Dashboard/7276700.png" alt="">
+                    <img class="image" src="7276700.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <p>humidity</p>
                      </div>
                      <div class="col">
-                      <img class="img" src="pic Assets/Dashboard/8047085.png" alt="">
+                      <img class="img" src="8047085.png" alt="">
                     <div>
                         <p class="wind">10 km/hr</p>
                        <p class="wind">wind speed</p>
